--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ footer a:hover { text-decoration: underline; }
 <header>
     <div class="logo">
         <img src="https://cdn.discordapp.com/attachments/1334993357105004685/1413914055365627924/077dadc2-8fd4-4116-9a87-d9a41333393b.png?ex=68bda994&is=68bc5814&hm=e8db4d2440b4b2791eb4fec9ea1f2d7ac02a7e46a9800195fc69354f17cbaede&" alt="Logo Boutique">
-        <h1>Boutique NOXER</h1>
+        <h1>Boutique NOXER          |         Payement seulement par paypal via le DISCORD</h1>
     </div>
 </header>
 
@@ -63,7 +63,7 @@ footer a:hover { text-decoration: underline; }
 
 <section class="shop-container" id="shop"></section>
 
-  <h4>mise à jour : 06/09/25</h4>
+  <h4>mise à jour : 07/09/25</h4>
 
 <footer>
     &copy; 2025 Boutique NOXER | Rejoignez-nous sur <a href="https://discord.gg/kvsgTwbC" target="_blank">Discord</a>
@@ -89,7 +89,7 @@ const products = [
         ]
     },
     {
-        name: "T-shirt Humanity",
+        name: "Humanity",
         category: "homme",
         description: "Un style unique qui mélange élégance et authenticité. Ce t-shirt arbore un logo légèrement déchiré, apportant une touche urbaine et rebelle sans perdre en classe. Conçu dans un tissu doux et résistant, il garantit un confort optimal tout en affirmant ton identité.",
         sizes: [
@@ -100,21 +100,29 @@ const products = [
             { size: "XL", price: "37,99€" }
         ],
         images: [
-            "https://cdn.discordapp.com/attachments/1334993357105004685/1413962862774190090/image.png?ex=68bdd708&is=68bc8588&hm=a53692d260f52c5208f0c78f8fc0b01430db0b4133b12b1cde86a08ae6ec9fb8&",
-            "https://cdn.discordapp.com/attachments/1334993357105004685/1413967164574007487/image.png?ex=68bddb0a&is=68bc898a&hm=7e99356e3eea339acfcfbe73025bf5322b3e7c8b45117bb8a066ee9458607d3e&",
-            "https://cdn.discordapp.com/attachments/1334993357105004685/1413967856978100414/image.png?ex=68bddbaf&is=68bc8a2f&hm=c8b2b7715fb9d484213beb7a542921d215c0a2d9fe9c0e272c03283165cb9c7c&"
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1413962862774190090/image.png?ex=68be7fc8&is=68bd2e48&hm=5953363272eeabf33e050fdfd9ab69aa1de79551284aaa481aa5520604cd26be&",
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1413964648570552481/image.png?ex=68be8172&is=68bd2ff2&hm=bee76c0959659d8e3ea4db005a0ba55f3deddabaccf0dc4e1a3f7905a347272a&",
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1413967164574007487/image.png?ex=68be83ca&is=68bd324a&hm=d466cba891e810c8b3c873686e09134d3989f7424b52b357f34162ac0aaf3695&",
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1413968569523372042/image.png?ex=68be8519&is=68bd3399&hm=40480503da513a67c9b456c5a39aa028079eee846cc5e7f93f1c880209c80b8d&"
         ]
     },
     {
-        name: "Casquette Street",
-        category: "accessoires",
-        description: "Casquette tendance, réglable et confortable.",
+        name: "Street Racer",
+        category: "homme",
+        description: "Un design taillé pour ceux qui vivent à toute vitesse. Inspiré de l’univers du street racing, ce pull allie style urbain et énergie brute. Confortable et résistant, il t’accompagne partout, que ce soit sur la route, en soirée ou dans ton quotidien.",
         sizes: [
-            { size: "Unique", price: "15€" }
+            { size: "XS", price: "29,99€" },
+            { size: "S", price: "32,99€" },
+            { size: "M", price: "33,99€" },
+            { size: "L", price: "35,99€" },
+            { size: "XL", price: "37,99€" }
+            
         ],
         images: [
-            "https://via.placeholder.com/300x300?text=Casquette+1",
-            "https://via.placeholder.com/300x300?text=Casquette+2"
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1414183807375904908/image.png?ex=68bea4cd&is=68bd534d&hm=e6b15fc4e7b8707c79730a76dd772dabce4d786b708eaac03daee36b57bcc3c8&",
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1414183807782883480/image.png?ex=68bea4ce&is=68bd534e&hm=0ffb9dabf5bed5f72568cf90f4c6e10312c0e4bc7439ea5a472e5746dfefe440&",
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1414183808214892545/image.png?ex=68bea4ce&is=68bd534e&hm=5bd53015e41bf9411c9056cf4b5a31a1c627a427c4b12ca8ec6be6670ccaa794&",
+            "https://cdn.discordapp.com/attachments/1334993357105004685/1414183808592253058/image.png?ex=68bea4ce&is=68bd534e&hm=92436562d1efded50a1c7fd87c85d8ed83d613022a4a7419fe96771f6555bc1f&"
         ]
     },
     {
